tests/baselines/reference/declareClassInterfaceImplementation.errors.txt
==== tests/cases/compiler/declareClassInterfaceImplementation.ts (1 errors) ====
    interface IBuffer {
        [index: number]: number;
    }
    
    declare class Buffer implements IBuffer {
                  ~~~~~~
!!! error TS2421: Class 'Buffer' incorrectly implements interface 'IBuffer':
!!! error TS2421:   Index signature is missing in type 'Buffer'.
    
    }
    